--- a/manifest.json
+++ b/manifest.json
@@ -1,16 +1,20 @@
 {
-  "name": "איתור רובריקות מתקדם",
   "short_name": "רובריקות",
-  "description": "כלי לאיתור רובריקות הומאופתיות - Pitronic Studio",
-  "start_url": "./",
-  "display": "standalone",
-  "background_color": "#f4f7f6",
-  "theme_color": "#2c3e50",
+  "name": "איתור רובריקות - Pitronic Studio",
   "icons": [
+    {
+      "src": "icon.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
     {
       "src": "icon.png",
       "sizes": "512x512",
       "type": "image/png"
     }
-  ]
+  ],
+  "start_url": ".",
+  "display": "standalone",
+  "theme_color": "#2c3e50",
+  "background_color": "#f8fafc"
 }
